# probe

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  TODO.md  install.md  todos.md
.github/workflows/: cmake.yml
docs/: quickstart.md
include/: layer.hpp  main.hpp  network.hpp
include/jitter/: config.hpp  jitter.hpp  jitterWorker.hpp  metrics.hpp  objective.hpp
include/jitter/main/: lockManager.hpp  logManager.hpp  logs.hpp  lossManager.hpp  net.hpp  netManager.hpp  responseQueue.hpp  taskManager.hpp  taskUtils.hpp
include/jitter/messages/: message.hpp  responseMessages.hpp
include/jitter/worker/: evaluator.hpp  messenger.hpp  worker.hpp  workerQueue.hpp
jitter/: README.md
probe/: CMakeLists.txt  README.md
probe/src/: network.cpp
probe/test/: layerTest.cpp
scripts/: createviz.py  viz.ipynb
src/: layer.cpp  main.cpp  network.cpp
src/jitter/: README.md  metrics.cpp  objective.cpp
src/jitter/main/: lockManager.cpp  logs.cpp  lossManager.cpp  net.cpp  netManager.cpp  responseQueue.cpp  taskManager.cpp
src/jitter/worker/: evaluator.cpp  worker.cpp  workerQueue.cpp
test/: layerTest.cpp  main.cpp  networkTest.cpp  test.hpp  testMain.cpp
